# Summer-Practice_2025

./: README.md
Laboratornaya_RKPP_5-7_Korol_Denis/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task_01-7_Korol_Denis/: CMakeLists.txt  addwindow.cpp  addwindow.h  addwindow.ui  computers.cpp  computers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rec.qrc
Task_02-7_Korol_Denis/: CMakeLists.txt  testcomputers.cpp  testcomputers.h  testlineedit.cpp  testlineedit.h
