cmake_minimum_required(VERSION 3.16)

project(Task_01-7_Korol_Denis VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Test)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Test)

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
        computers.cpp
        computers.h
        addwindow.cpp
        addwindow.h
        addwindow.ui
        rec.qrc
        img/875d57be750dcfdacc84da705edc5c65.jpg
        img/List.png
        img/ListView.png
        img/tabel.png
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(Task_01-7_Korol_Denis
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
# set_property(TARGET Task_01-7_Korol_Denis APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
# ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation else()
else()
    if(ANDROID)
        add_library(Task_01-7_Korol_Denis SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
# set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(Task_01-7_Korol_Denis
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(Task_01-7_Korol_Denis PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Task_01-7_Korol_Denis)
endif()

set_target_properties(Task_01-7_Korol_Denis PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS Task_01-7_Korol_Denis
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(Task_01-7_Korol_Denis)
endif()

enable_testing()

add_executable(testcomputers
    testcomputers.cpp
    testcomputers.h
    computers.cpp
)

set_target_properties(testcomputers PROPERTIES AUTOMOC ON)

target_link_libraries(testcomputers
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Test
    Qt${QT_VERSION_MAJOR}::Widgets
)

add_test(NAME TestComputers COMMAND testcomputers)

add_executable(testlineedit
    testlineedit.cpp
    testlineedit.h
)

set_target_properties(testlineedit PROPERTIES AUTOMOC ON)

target_link_libraries(testlineedit
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Test
    Qt${QT_VERSION_MAJOR}::Widgets
)

add_test(NAME TestLineEdit COMMAND testlineedit)
